--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Evolution (Biology) -- History'
+- GITenberg
 title: 'The Coming of Evolution: The Story of a Great Revolution in Science'
 url: http://www.gutenberg.org/ebooks/31316
